// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Features - Peer - Filter Aggregate Group Component should apply the collapsed class to the .aggregate-group when collapse is true 1`] = `
<pf-filter-aggregate-group
  aggregateGroup={[Function Object]}
  aggregateGroupSelectionsToggled={[Function EventEmitter]}
  aggregateToggled={[Function EventEmitter]}
  collapsed={[Function Boolean]}
  previewLimit={[Function Number]}
>
  <div
    class="aggregate-group collapsed"
  >
    <div
      class="aggregate-group-header"
    >
      <div
        class="header-left space-out-children-right"
      >
        <div>
          <input
            type="checkbox"
          />
        </div>
        <div>
           MockLabel 
        </div>
      </div>
      <div
        class="header-right"
      >
        
        
        <div>
          <i
            class="far fa-angle-down"
          />
        </div>
        
      </div>
    </div>
    <div
      class="aggregate-container"
    >
      
      
      
      <pf-filter-aggregate />
      
      
    </div>
    
  </div>
</pf-filter-aggregate-group>
`;

exports[`Features - Peer - Filter Aggregate Group Component should apply the show-all class to the .aggregate-container when showAllAggregates is true 1`] = `
<pf-filter-aggregate-group
  aggregateGroup={[Function Object]}
  aggregateGroupSelectionsToggled={[Function EventEmitter]}
  aggregateToggled={[Function EventEmitter]}
  previewLimit={[Function Number]}
  showAllAggregates={[Function Boolean]}
>
  <div
    class="aggregate-group"
  >
    <div
      class="aggregate-group-header"
    >
      <div
        class="header-left space-out-children-right"
      >
        <div>
          <input
            type="checkbox"
          />
        </div>
        <div>
           MockLabel 
        </div>
      </div>
      <div
        class="header-right"
      >
        
        
        
        <div>
          <i
            class="far fa-angle-up"
          />
        </div>
      </div>
    </div>
    <div
      class="aggregate-container show-all"
    >
      
      
      
      <pf-filter-aggregate />
      
      
    </div>
    
  </div>
</pf-filter-aggregate-group>
`;

exports[`Features - Peer - Filter Aggregate Group Component should display 'select all' checkbox as checked when all items are selected 1`] = `
<pf-filter-aggregate-group
  aggregateGroup={[Function Object]}
  aggregateGroupSelectionsToggled={[Function EventEmitter]}
  aggregateToggled={[Function EventEmitter]}
  previewLimit={[Function Number]}
>
  <div
    class="aggregate-group"
  >
    <div
      class="aggregate-group-header"
    >
      <div
        class="header-left space-out-children-right"
      >
        <div>
          <input
            type="checkbox"
          />
        </div>
        <div>
           
        </div>
      </div>
      <div
        class="header-right"
      >
        
        
        
      </div>
    </div>
    <div
      class="aggregate-container"
    >
      
      
    </div>
    
  </div>
</pf-filter-aggregate-group>
`;

exports[`Features - Peer - Filter Aggregate Group Component should display 'select all' checkbox as un-checked when only some items are selected 1`] = `
<pf-filter-aggregate-group
  aggregateGroup={[Function Object]}
  aggregateGroupSelectionsToggled={[Function EventEmitter]}
  aggregateToggled={[Function EventEmitter]}
  previewLimit={[Function Number]}
>
  <div
    class="aggregate-group"
  >
    <div
      class="aggregate-group-header"
    >
      <div
        class="header-left space-out-children-right"
      >
        <div>
          <input
            type="checkbox"
          />
        </div>
        <div>
           
        </div>
      </div>
      <div
        class="header-right"
      >
        
        
        
      </div>
    </div>
    <div
      class="aggregate-container"
    >
      
      
    </div>
    
  </div>
</pf-filter-aggregate-group>
`;

exports[`Features - Peer - Filter Aggregate Group Component should show a 'Show Less' link when showAllAggregates is true 1`] = `
<pf-filter-aggregate-group
  aggregateGroup={[Function Object]}
  aggregateGroupSelectionsToggled={[Function EventEmitter]}
  aggregateToggled={[Function EventEmitter]}
  previewLimit={[Function Number]}
  showAllAggregates={[Function Boolean]}
>
  <div
    class="aggregate-group"
  >
    <div
      class="aggregate-group-header"
    >
      <div
        class="header-left space-out-children-right"
      >
        <div>
          <input
            type="checkbox"
          />
        </div>
        <div>
           MockLabel 
        </div>
      </div>
      <div
        class="header-right"
      >
        
        
        
        <div>
          <i
            class="far fa-angle-up"
          />
        </div>
      </div>
    </div>
    <div
      class="aggregate-container show-all"
    >
      
      
      
      <pf-filter-aggregate />
      <pf-filter-aggregate />
      <pf-filter-aggregate />
      <pf-filter-aggregate />
      <pf-filter-aggregate />
      <pf-filter-aggregate />
      <pf-filter-aggregate />
      <pf-filter-aggregate />
      <pf-filter-aggregate />
      <pf-filter-aggregate />
      
      
    </div>
    
    <div
      class="toggle-option-height"
    >
       Show 
      
      
      <span>
         Less 
        <i
          class="far fa-angle-up"
        />
      </span>
    </div>
  </div>
</pf-filter-aggregate-group>
`;

exports[`Features - Peer - Filter Aggregate Group Component should show the Options Toggle when the number of aggregates is greater than the preview limit 1`] = `
<pf-filter-aggregate-group
  aggregateGroup={[Function Object]}
  aggregateGroupSelectionsToggled={[Function EventEmitter]}
  aggregateToggled={[Function EventEmitter]}
  previewLimit={[Function Number]}
>
  <div
    class="aggregate-group"
  >
    <div
      class="aggregate-group-header"
    >
      <div
        class="header-left space-out-children-right"
      >
        <div>
          <input
            type="checkbox"
          />
        </div>
        <div>
           MockLabel 
        </div>
      </div>
      <div
        class="header-right"
      >
        
        
        
        <div>
          <i
            class="far fa-angle-up"
          />
        </div>
      </div>
    </div>
    <div
      class="aggregate-container"
    >
      
      
      
      <pf-filter-aggregate />
      <pf-filter-aggregate />
      <pf-filter-aggregate />
      <pf-filter-aggregate />
      <pf-filter-aggregate />
      
      
    </div>
    
    <div
      class="toggle-option-height"
    >
       Show 
      
      <span>
         5 More 
        <i
          class="far fa-angle-down"
        />
      </span>
      
    </div>
  </div>
</pf-filter-aggregate-group>
`;
